turned off scrollbar to prevent overflow

--- a/my-app/src/components/App/reset.module.scss
+++ b/my-app/src/components/App/reset.module.scss
@@ -112,6 +112,10 @@ section {
 body {
   line-height: 1;
 }
+// turn off scrollbar
+body::-webkit-scrollbar {
+  display: none;
+}
 ol,
 ul {
   list-style: none;
